http://ant.apache.org/ivy/download.cgi

Issues should be reported to:
https://issues.apache.org/jira/browse/IVY

More information can be found on the website:
http://ant.apache.org/ivy/
----

=== List of Changes in this Release

For details about the following changes, check our JIRA install at
http://issues.apache.org/jira/browse/ivy

List of changes since Ivy 2.4.0:

- FIX: Made the maven 'test' configuration public so we can use the test-jar as dependency (link:https://issues.apache.org/jira/browse/IVY-1444[IVY-1444])
- FIX: NullPointerException in dependencytree with no dependencies (link:https://issues.apache.org/jira/browse/IVY-1539[IVY-1539])
- FIX: checkIfChanged is not settable attribute for checkdepsupdate ant task (link:https://issues.apache.org/jira/browse/IVY-1549[IVY-1549])
- FIX: ArrayIndexOutOfBoundsException when using a p2 repository for dependencies (link:https://issues.apache.org/jira/browse/IVY-1504[IVY-1504])
- FIX: fixdeps remove transitive 'kept' dependencies
- FIX: PomModuleDescriptorParser should parse licenses from parent POM (link:https://issues.apache.org/jira/browse/IVY-1526[IVY-1526]) (Thanks to Jaikiran Pai)
- FIX: dynamic revisions are not cached per resolver (link:https://issues.apache.org/jira/browse/IVY-1430[IVY-1430]) (Thanks to Stephen Haberman)
- FIX: Dependencies failed using branch attribute (and extra attributes) (link:https://issues.apache.org/jira/browse/IVY-1141[IVY-1141]) (Thanks to Stephen Haberman)
- FIX: useCacheOnly should allow lookup of changing dependencies in cache (link:https://issues.apache.org/jira/browse/IVY-1515[IVY-1515]) (Thanks to Ilya)
- FIX: Translation of POM to Ivy XML with * exclusion is removing main artifact (link:https://issues.apache.org/jira/browse/IVY-1531[IVY-1531]) (Thanks to Jaikiran Pai)
- FIX: Have makepom task take description from ivy-module > info > description element (link:https://issues.apache.org/jira/browse/IVY-1520[IVY-1520])