@@ -5130,10 +5130,53 @@ decl_stmt|;
 name|ConflictManager
 name|conflictManager
 init|=
+literal|null
+decl_stmt|;
+for|for
+control|(
+name|VisitNode
+name|current
+range|:
 name|ancestor
+operator|.
+name|getPath
+argument_list|()
+control|)
+block|{
+name|ModuleDescriptor
+name|descriptor
+init|=
+name|current
 operator|.
 name|getNode
 argument_list|()
+operator|.
+name|getDescriptor
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|descriptor
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalStateException
+argument_list|(
+literal|"impossible to get conflict manager when data has not been loaded. IvyNode = "
+operator|+
+name|current
+operator|.
+name|getNode
+argument_list|()
+argument_list|)
+throw|;
+block|}
+name|conflictManager
+operator|=
+name|descriptor
 operator|.
 name|getConflictManager
 argument_list|(
@@ -5142,7 +5185,37 @@ operator|.
 name|getModuleId
 argument_list|()
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+if|if
+condition|(
+name|conflictManager
+operator|!=
+literal|null
+condition|)
+block|{
+break|break;
+block|}
+block|}
+if|if
+condition|(
+name|conflictManager
+operator|==
+literal|null
+condition|)
+block|{
+name|conflictManager
+operator|=
+name|settings
+operator|.
+name|getConflictManager
+argument_list|(
+name|node
+operator|.
+name|getModuleId
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 name|Collection
 argument_list|<
 name|IvyNode
