@@ -2711,6 +2711,115 @@ annotation|@
 name|Test
 specifier|public
 name|void
+name|testResolveWithConflictManagerDefinedAtHigherLevel
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// test case for IVY-1404
+comment|// #M1;1.0 -> #M2;1.0
+comment|// #M1;2.0 -> {#M2;1.0 #M3;1.0}
+comment|// #M2;1.0 -> org1#mod1.2;1.1
+comment|// #M3;1.0 -> org1#mod1.2;2.0
+comment|// #M1;1.0 has conflict manager:<conflict org="org1" module="mod1.2" rev="1.1,2.0" />
+name|ResolveReport
+name|report
+init|=
+name|ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/IVY-1404/M1/ivys/ivy-1.0.xml"
+argument_list|)
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"*"
+block|}
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertFalse
+argument_list|(
+name|report
+operator|.
+name|hasError
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ArtifactDownloadReport
+index|[]
+name|adrs
+init|=
+name|report
+operator|.
+name|getConfigurationReport
+argument_list|(
+literal|"default"
+argument_list|)
+operator|.
+name|getDownloadedArtifactsReports
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|adrs
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"1.1"
+argument_list|,
+name|adrs
+index|[
+literal|0
+index|]
+operator|.
+name|getArtifact
+argument_list|()
+operator|.
+name|getId
+argument_list|()
+operator|.
+name|getRevision
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"2.0"
+argument_list|,
+name|adrs
+index|[
+literal|1
+index|]
+operator|.
+name|getArtifact
+argument_list|()
+operator|.
+name|getId
+argument_list|()
+operator|.
+name|getRevision
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
 name|testResolveRequiresDescriptor
 parameter_list|()
 throws|throws
